# tt4l

./: .gitignore  README.md  pyproject.toml
src/tt4l/: __init__.py  modeling_outputs.py  optimizer_builder.py  text_utils.py
src/tt4l/cli/: inference.py  main.py  utils.py
src/tt4l/factory/: __init__.py  auto.py
src/tt4l/functional/: __init__.py  numpy.py
src/tt4l/layers/: __init__.py
src/tt4l/loss/: __init__.py  multi_label_categorical_cross_entropy.py
src/tt4l/metrics/: __init__.py  base.py
src/tt4l/models/: __init__.py  modeling_bert.py  modeling_ernie.py
src/tt4l/parser/: __init__.py  sequence_parser.py
src/tt4l/utils/: env.py  import_utils.py  ploting.py  testing_utils.py
tests/: test.py
tests/layers/: test_layers.py
tests/layers/encoder/: __init__.py  test_position.py
tests/layers/pooling/: __init__.py  test_last_hidden_states_pooling.py
tests/loss/: __init__.py  test_multi_label_categorical_cross_entropy.py
tests/metrics/: __init__.py  test_compute.py
tests/models/: __init__.py  test_modeling_bert.py  test_modeling_ernie.py  test_models.py
tt4l/: __init__.py  modeling_outputs.py  optimizer_builder.py
tt4l/cli/: __init__.py  default_arguments.py  inference.py  main.py  utils.py
tt4l/factory/: __init__.py  auto.py
tt4l/loss/: multi_label_categorical_cross_entropy.py
tt4l/metrics/: __init__.py  f1.py
tt4l/models/: __init__.py  modeling_bert.py  modeling_ernie.py
tt4l/modules/: __init__.py
tt4l/parser/: __init__.py  base.py  sequence_parser.py  span_parser.py
tt4l/utils/: __init__.py  logger.py  testing_utils.py
(+67 files in other folders)
