[tool.poetry]
name = "tt4l"
version = "0.0.4"
description = "Training a transformer model for language"
authors = ["ZhouHang <fjklqq@gmail.com>"]
readme = "README.md"
packages = [{ include = "tt4l", from = "src" }]
license = "Apache-2.0"
homepage = "https://github.com/fjklqq/tt4l"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
torch = "^2.1.0"
transformers = ">=4.41.2,<=4.46.1"
pydantic = "^2.6.0"
scikit-learn = "^1.4.0"
evaluate = "^0.4.2"
datasets = "^2.17.0"
seqeval = "^1.2.2"
accelerate = ">=0.34.0,<=1.0.1"
matplotlib = "^3.9.2"

[tool.poetry.scripts]
tt4l = "tt4l.cli.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
